For docs: Control-Break-demo ..

--- a/jfreereport-tools/ant/build.properties
+++ b/jfreereport-tools/ant/build.properties
@@ -1,8 +1,15 @@
-###########################################################
 #
-#  Global settings ...
-jfreereport.name=jfreereport
-jfreereport.version=0.8.4_11
+# Defines the JFreeReport base project directory, this is the directory, where the file
+# jfreereport-xxx.jar and jfreereport-xxx-demo.jar are located.
+#
+# The directory specified here is relative to the root directory of the project
+jfreereport-dir=../jfreereport
+
+#
+# Optional: Define the library path, where the required jar files are located.
+# By default, the library directory is contained in the JFreeReport distribution
+# directory.
+jfreereport-libdir=${jfreereport-dir}/lib
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -19,25 +26,19 @@ build.target=1.2
 #
 # Build setup
 #
-libdir=lib
+tools.libdir=lib
 
 #
 # where to copy the created jar files
-targetdir=
+tools.targetdir=
 
-manifest-lib-prefix=lib/
+tools.manifest-lib-prefix=lib/
 
 ###########################################################
 #
 #  Used libraries ...
-jcommon-jar-file=jcommon-1.0.0-pre2-cvs.jar
-jcommon-xml-jar-file=jcommon-xml-1.0.0-pre2-cvs.jar
 common-logging-jar-file=commons-logging.jar
 common-beanutils-jar-file=commons-beanutils.jar
 common-collections-jar-file=commons-collections.jar
 java-tools-jar-file=/opt/j2sdk1.4.2_06/lib/tools.jar
 
-##############################################################
-#
-# Generated files ...
-jfreereport-tools-jar-file=${targetdir}${jfreereport.name}-${jfreereport.version}-tools.jar
