Demo restructuring - work in progress ...

--- a/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
+++ b/jfreereport/source/org/jfree/report/demo/resources/demo-resources.properties
@@ -53,3 +53,10 @@ demo.report-footer.simple.Title=Report-Footer Demo (Simple)
 
 demo.report-footer.complex.Description=Demonstrates how to put a report footer at the bottom of the last page.
 demo.report-footer.complex.Title=Report-Footer Demo (Complex)
+
+csvdemodialog.separator.colon=Comma (,)
+csvdemodialog.separator.other=Other
+csvdemodialog.separator.semicolon=Semicolon (;)
+csvdemodialog.separator.tab=Tabulator
+csvdemodialog.separatorchar=Separator Character
+csvdemodialog.csv-file-description
