Demo restructuring - work in progress ... SurveyScale Elements beanified.

--- a/jfreereport/ant/build.xml
+++ b/jfreereport/ant/build.xml
@@ -113,6 +113,8 @@ module-file=$${module-${module}-file}</echo>
       </fileset>
     </copy>
 
+    <copy file="maven-jfreereport-project.xml" tofile="distribution/maven-jfreereport-project.xml"/>
+	
   </target>
 
   <target name="remove-dist-dir">
