There were still issues with the table export: The funny thing ignored text content due to a misplaced curly brace and messed up the background styles due to the stricter background computation used now.

--- a/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/base/configuration.properties
@@ -16,4 +16,4 @@ org.jfree.report.modules.output.table.base.StrictLayout=false
 #
 # You certainly don't want that switch to be enabled in production
 # environments.
-org.jfree.report.targets.table.TableWriter.DebugReportLayout=false
+org.jfree.report.targets.table.TableWriter.DebugReportLayout=true
