Printer and log module fixes.

--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -33,6 +33,8 @@
 # The Internet-Explorer is not able to use correct CSS2 yet - they never
 # obeyed to standards anyway, so that's no surprise that this defaults
 # to "false"..
+#
+# This is a local configuration setting an can be enabled in the report.
 org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
 
 #
@@ -43,10 +45,22 @@ org.jfree.report.modules.output.table.html.EmptyCellsUseCSS=false
 #
 # Most users are used to think in pixels, so this will be
 # the default.
+#
+# This is a local configuration setting an can be enabled in the report.
 org.jfree.report.modules.output.table.html.UseDeviceIndependentImageSize=false
 
 #
 # Defines, whether table rows should carry a border definition
 # (in addition to the cell definitions). This is a workaround
 # for a layout bug in the Mozilla browser family. 
+#
+# This is a local configuration setting an can be enabled in the report.
 org.jfree.report.modules.output.table.html.TableRowBorderDefinition=false
+
+#
+# Enables the use of proportional column widths instead of static ones.
+# The resulting table will have a width of 100% and the columns will have
+# the proportional equivalent of their static widths as width.
+#
+# This is a local configuration setting an can be enabled in the report.
+org.jfree.report.modules.output.table.html.ProportionalColumnWidths=false
