--- a/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/configuration.properties
@@ -52,3 +52,21 @@ org.jfree.report.modules.gui.print.pagesetup.Separated=true
 #
 # Defines, whether the progress dialog will be visible while exporting.
 org.jfree.report.modules.gui.print.ProgressDialogEnabled=true
+
+##
+#
+# Although the following properties do not define real configuration settings
+# (as no mandatory code will use them), these properties define a set
+# of conventions that should be used by all print services.
+
+#
+# The PrinterJob-Name defines how this report will appear in the spool when
+# being printed. If not defined, service implementors should use the
+# Report's name as JobName
+#org.jfree.report.modules.gui.print.JobName=
+
+##
+# This defines, that the AWT print service is active.
+# Uncomment it to enforce the use of the AWT print service, even if a
+# better implementation is available.
+#org.jfree.report.modules.gui.print.PrintService=org.jfree.report.modules.gui.print.AWTPrintingGUIModule
