--- a/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/print/module.properties
@@ -3,12 +3,13 @@
 #
 
 module-info:
-  name: gui-print
+  name: java.awt.print-export-gui
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: A dialog component for JDK 1.2.2 style printing.
   version.major: 0
   version.minor: 85
   version.patchlevel: 0
+  subsystem: printing-gui
 
 depends:
   module: org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
