JUnit testcases updated, Java1.4 support improved (printing, logging, imaging)

--- a/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/jfreereport-ext.properties
@@ -9,5 +9,6 @@ org.jfree.report.ext.modules.barcode.io.Module=org.jfree.report.ext.modules.barc
 org.jfree.report.ext.modules.java14log.Module=org.jfree.report.ext.modules.java14log.Java14LogModule
 org.jfree.report.ext.modules.java14config.Module=org.jfree.report.ext.modules.java14config.Java14ConfigModule
 org.jfree.report.ext.modules.java14print.Module=org.jfree.report.ext.modules.java14print.Java14PrintModule
+org.jfree.report.ext.modules.java14imageio.Module=org.jfree.report.ext.modules.java14imageio.Java14ImageIOModule
 org.jfree.report.ext.modules.log4jlog.Module=org.jfree.report.ext.modules.log4jlog.Log4JLogModule
 org.jfree.report.ext.modules.jfreechart.Module=org.jfree.report.ext.modules.jfreechart.JFreeChartModule
