--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14imageio/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14imageio/module.properties
@@ -10,10 +10,9 @@ module-info:
   version.major: 0
   version.minor: 85
   version.patchlevel: 0
-  subsystem: logging
 
 depends:
-  module: org.jfree.report.JFreereportCoreModule
+  module: org.jfree.report.JFreeReportCoreModule
   version.major: 0
   version.minor: 85
   version.patchlevel: 0
