--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
@@ -1,13 +1,8 @@
 #
 # Configuration settings for the Printing dialog components.
+# (Please note, that this configuration is merged with the settings from
+# the AWT print module)
 #
-
-#
-# Set to false to disable the Printing export using the preview dialog.
-# This will not prevent anyone from calling the dialog manually, but
-# the export plugin will not be included by default.
-#
-org.jfree.report.ext.modules.java14print.Enable=false
 
 #
 # The order defines the menu layout of all plugins. The value defined
@@ -24,4 +19,10 @@ org.jfree.report.ext.modules.java14print.AddToToolbar=true
 # Set to true, to separate the menu and toolbar entry from other elements.
 # This inserts an separator after the menu entry.
 org.jfree.report.ext.modules.java14print.Separated=false
+
+##
+# This defines, that the JDK 1.4 print service is active.
+# Uncomment it to enforce the use of the JDK 1.4 print service, even if a
+# better implementation is available.
+#org.jfree.report.modules.gui.print.PrintService=JAVAX.PRINT
 
