--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/module.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/module.properties
@@ -9,6 +9,7 @@ module-info:
   version.major: 0
   version.minor: 85
   version.patchlevel: 0
+  subsystem: printing-gui
 
 depends:
   module: org.jfree.report.modules.output.pageable.graphics.Graphics2DPageableModule
