--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -37,7 +37,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.0-rc1.jar
+jcommon-jar-file=jcommon-1.0.0-rc1-cvs.jar
 pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
@@ -45,7 +45,7 @@ beanshell-jar-file=bsh-1.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
-jcommon-xml-jar-file=jcommon-xml-1.0.0-rc1.jar
+jcommon-xml-jar-file=jcommon-xml-1.0.0-rc1-cvs.jar
 
 # Used by: module-output-pdf
 #          module-output-table-rtf
