Master Select Support for Epson Printers

--- a/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
@@ -14,3 +14,4 @@
 #
 # Defines the printer font. Valid values are 10, 12, 15, 17 or 20
 #org.jfree.report.modules.output.pageable.plaintext.CharsPerInch=10
+org.jfree.report.modules.output.pageable.plaintext.UseEpsonMasterSelect=false
