Some documentation, and fix for TableContentCreator.

--- a/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/pageable/plaintext/configuration.properties
@@ -14,4 +14,9 @@
 #
 # Defines the printer font. Valid values are 10, 12, 15, 17 or 20
 #org.jfree.report.modules.output.pageable.plaintext.CharsPerInch=10
+
+#
+# Defines, whether a single command (the master select) or a series of separate
+# commands is used to define the font style on epson printers. Enabling this
+# property may improve the printing speed.
 org.jfree.report.modules.output.pageable.plaintext.UseEpsonMasterSelect=false
