--- a/jfreereport/source/org/jfree/report/jfreereport.properties
+++ b/jfreereport/source/org/jfree/report/jfreereport.properties
@@ -94,6 +94,7 @@ org.jfree.report.modules.base.core.Module=org.jfree.report.JFreeReportCoreModule
 
 #
 # Helper modules ..
+org.jfree.report.modules.misc.bsf.Module=org.jfree.report.modules.misc.bsf.BSFModule
 org.jfree.report.modules.misc.beanshell.Module=org.jfree.report.modules.misc.beanshell.BeanShellModule
 org.jfree.report.modules.misc.referencedoc.Module=org.jfree.report.modules.misc.referencedoc.ReferenceDocModule
 org.jfree.report.modules.misc.tablemodel.Module=org.jfree.report.modules.misc.tablemodel.TableModelModule
