--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -6,6 +6,7 @@
 #  Global settings ...
 jfreereport.name=jfreereport
 jfreereport.version=0.8.6-pre
+jcommon.version=1.0.0-rc1-cvs
 
 #
 # This defines the compiler settings. Optimizing would remove
@@ -43,6 +44,9 @@ pixie-jar-file=pixie-0.8.4.jar
 # Used by: module-misc-beanshell
 beanshell-jar-file=bsh-1.3.0.jar
 
+# Used by: module-misc-beanshell
+bsf-jar-file=bsf-2.3.0.jar
+
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
 jcommon-xml-jar-file=jcommon-xml-1.0.0-rc1-cvs.jar
@@ -65,6 +69,7 @@ jfreereport-bundle-jar-file=${targetdir}${jfreereport.name}-${jfreereport.versio
 core-jar-file=${targetdir}${jfreereport.name}-core-${jfreereport.version}.jar
 
 module-misc-beanshell-file=${targetdir}${jfreereport.name}-misc-beanshell-${jfreereport.version}.jar
+module-misc-bsf-file=${targetdir}${jfreereport.name}-misc-bsf-${jfreereport.version}.jar
 module-misc-configstore-base-file=${targetdir}${jfreereport.name}-misc-configstore-base-${jfreereport.version}.jar
 module-misc-configstore-filesystem-file=${targetdir}${jfreereport.name}-misc-configstore-filesystem-${jfreereport.version}.jar
 module-misc-logging-base-file=${targetdir}${jfreereport.name}-misc-logging-base-${jfreereport.version}.jar
