Updated JFreeChart to latest released version.

--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -4,6 +4,7 @@
 #
 # The directory specified here is relative to the root directory of the project
 jfreereport-dir=../jfreereport
+jfreechart.version=1.0.0-pre2
 
 #
 # Optional: Define the library path, where the required jar files are located.
