--- a/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
+++ b/jfreereport-ext/source/org/jfree/report/ext/modules/java14print/configuration.properties
@@ -4,25 +4,9 @@
 # the AWT print module)
 #
 
-#
-# The order defines the menu layout of all plugins. The value defined
-# here is suitable for the default configuration. Increasing the
-# order value will move the menu entry for this plugin to the end of the list.
-#
-org.jfree.report.ext.modules.java14print.Order=71
-
-#
-# Set to true, to show a button for this export type on the toolbar.
-org.jfree.report.ext.modules.java14print.AddToToolbar=true
-
-#
-# Set to true, to separate the menu and toolbar entry from other elements.
-# This inserts an separator after the menu entry.
-org.jfree.report.ext.modules.java14print.Separated=false
-
 ##
 # This defines, that the JDK 1.4 print service is active.
-# Uncomment it to enforce the use of the JDK 1.4 print service, even if a
+# Uncomment it to force the system to use the JDK 1.4 print service, even if a
 # better implementation is available.
 #org.jfree.report.modules.gui.print.PrintService=JAVAX.PRINT
 
