--- a/jfreereport/source/org/jfree/report/modules/misc/tablemodel/module.properties
+++ b/jfreereport/source/org/jfree/report/modules/misc/tablemodel/module.properties
@@ -7,6 +7,13 @@ module-info:
   producer: The JFreeReport project - www.jfree.org/jfreereport
   description: Some utility classes to make tablemodels easier to use.
   version.major: 0
-  version.minor: 85
+  version.minor: 86
   version.patchlevel: 0
+
+depends:
+  module: org.jfree.report.JFreeReportCoreModule
+  version.major: 0
+  version.minor: 86
+  version.patchlevel: 0
+
 
