--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.6-pre
+jfreereport.version=0.8.6
 jcommon.version=1.0.0-rc1-cvs
 
 #
