ANT fixes (must be left overs from the release)

--- a/jfreereport-ext/ant/build.properties
+++ b/jfreereport-ext/ant/build.properties
@@ -4,7 +4,7 @@
 #
 # The directory specified here is relative to the root directory of the project
 jfreereport-dir=../jfreereport
-jfreechart.version=1.0.0-pre2
+jfreechart.version=1.0.0-rc1
 
 #
 # Optional: Define the library path, where the required jar files are located.
@@ -29,6 +29,6 @@ junit-jar-file=junit.jar
 log4j-jar-file=log4j-1.2.3.jar
 jlfgr-archive-file=jlfgr-1_0.zip
 servlet-jar-file=servlet.jar
-jfreechart-jar-file=jfreechart-1.0.0-pre2.jar
+jfreechart-jar-file=jfreechart-1.0.0-rc1.jar
 
 
