Fix for the group-footer-pagebreak crash in the Table-Exports; Added new style property: href-window to specify the target window for links in HTML documents

--- a/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
+++ b/jfreereport/source/org/jfree/report/modules/output/table/html/configuration.properties
@@ -64,3 +64,12 @@ org.jfree.report.modules.output.table.html.TableRowBorderDefinition=false
 #
 # This is a local configuration setting an can be enabled in the report.
 org.jfree.report.modules.output.table.html.ProportionalColumnWidths=false
+
+#
+# Defines, whether to encode link targets. For historical reasons, this
+# defaults to 'true' and therefore *disables* the encoding of link targets.
+# Links are printed as is.
+#
+# For future report versions, this should default to 'false' to make sure
+# that there is no way to break the reports.
+org.jfree.report.modules.output.table.html.AllowRawLinkTargets=true
