The PDF font handling has been reworked. Additionally bugs in the report configuration handling of the CSV and RTF exports have been resolved.

--- a/jfreereport/source/org/jfree/report/demo/demo.properties
+++ b/jfreereport/source/org/jfree/report/demo/demo.properties
@@ -1,6 +1,6 @@
 #
 # This file is copied into the root directory of the demo jar file.
-# If supplies some usefull default configurations for the demos.
+# It supplies some usefull default configurations for the demos.
 
 # 
 # The minimum loglevel that is logged.
