--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -5,7 +5,7 @@
 #
 #  Global settings ...
 jfreereport.name=jfreereport
-jfreereport.version=0.8.6-2
+jfreereport.version=0.8.6-3
 jcommon.version=1.0.0-rc1-cvs
 
 #
@@ -54,7 +54,8 @@ jcommon-xml-jar-file=jcommon-xml-1.0.0-rc1-cvs.jar
 # Used by: module-output-pdf
 #          module-output-table-rtf
 #          module-output-support-itext
-itext-jar-file=itext-1.3.4.jar
+itext-jar-file=itext-1.3.5.jar
+libfonts-jar-file=libfonts-0.1.0.jar
 
 # Used by: module-output-table-xml
 jakarta-poi-jar-file=poi-2.5.1-final-20040804.jar
