--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -6,7 +6,7 @@
 #  Global settings ...
 jfreereport.name=jfreereport
 jfreereport.version=0.8.6-3
-jcommon.version=1.0.0-rc1-cvs
+jcommon.version=1.0.0
 
 #
 # This defines the compiler settings. Optimizing would remove
