Updated the library dependencies ..

--- a/jfreereport/ant/build.properties
+++ b/jfreereport/ant/build.properties
@@ -38,7 +38,7 @@ manifest-lib-prefix=lib/
 #  Used libraries ...
 
 # Used by: core libraries
-jcommon-jar-file=jcommon-1.0.0-rc1-cvs.jar
+jcommon-jar-file=jcommon-1.0.0.jar
 pixie-jar-file=pixie-0.8.4.jar
 
 # Used by: module-misc-beanshell
@@ -49,7 +49,7 @@ bsf-jar-file=bsf-2.3.0.jar
 
 # Used by: module-parser
 jaxp-jar-file=gnujaxp.jar
-jcommon-xml-jar-file=jcommon-xml-1.0.0-rc1-cvs.jar
+jcommon-xml-jar-file=jcommon-xml-1.0.0.jar
 
 # Used by: module-output-pdf
 #          module-output-table-rtf
